<resources>
    <string name="app_name">ContactsList</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buscar_contato">Buscar Contato</string>
    <string name="botao_add">Botão Add</string>
    <string name="salvar">Salvar</string>
    <string name="nome">Nome</string>
    <string name="foto_avatar">Foto avatar</string>
    <string name="contato">Contato</string>
    <string name="telefone">Telefone</string>
    <string name="editar">Editar</string>
    <string name="chamar">Chamar</string>
    <string name="inserir">Inserir</string>
    <string name="botao_de_chamada">Botão de chamada</string>
    <string name="botao_de_exclusao">Botão de exclusão</string>
</resources>