<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.show.ShowFragment">

        <ImageView
            android:id="@+id/show_image"
            android:layout_width="@dimen/dimen_exp"
            android:layout_height="@dimen/dimen_exp"
            android:contentDescription="@string/foto_avatar"
            app:srcCompat="@drawable/ic_avatar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/contact_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contato"
            app:layout_constraintStart_toEndOf="@id/show_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/style_title" />

        <TextView
            android:id="@+id/name_contact_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="André"
            android:textSize="@dimen/subtitle_text"
            app:layout_constraintStart_toStartOf="@id/contact_show"
            app:layout_constraintEnd_toEndOf="@id/contact_show"
            app:layout_constraintTop_toBottomOf="@id/contact_show" />

        <TextView
            android:id="@+id/phone_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefone"
            app:layout_constraintStart_toEndOf="@id/show_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_contact_show"
            style="@style/style_title"/>

        <TextView
            android:id="@+id/number_phone_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="(87) 99960-9969"
            android:textSize="@dimen/subtitle_text"
            app:layout_constraintStart_toStartOf="@id/phone_show"
            app:layout_constraintEnd_toEndOf="@id/phone_show"
            app:layout_constraintTop_toBottomOf="@id/phone_show"/>

        <Button
            android:id="@+id/button_show"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/editar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_chamada_show"
            app:layout_constraintTop_toBottomOf="@id/number_phone_show"
            style="@style/button_style" />

        <Button
            android:id="@+id/button_chamada_show"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/chamar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_show"
            app:layout_constraintBaseline_toBaselineOf="@id/button_show"
            style="@style/button_style"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>