<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.edit.EditFragment">

        <ImageView
            android:id="@+id/edit_image"
            android:layout_width="@dimen/dimen_exp"
            android:layout_height="@dimen/dimen_exp"
            android:contentDescription="@string/foto_avatar"
            app:srcCompat="@drawable/ic_avatar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/nome"
            android:layout_marginTop="@dimen/margin_top_view"
            app:layout_constraintStart_toEndOf="@id/edit_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:inputType="text"
            android:autofillHints="name" />

        <EditText
            android:id="@+id/edit_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/telepone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/edit_image"
            app:layout_constraintTop_toBottomOf="@id/edit_name"
            android:inputType="phone"
            android:autofillHints="phone" />

        <Button
            android:id="@+id/edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salvar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_phone"
            style="@style/button_style" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>