<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="itemContact"
            type="com.project.contactslist.screens.database.Contacts" />

        <variable
            name="clickListener"
            type="com.project.contactslist.screens.contacts.ContactsListener" />
    </data>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardElevation="20dp"
        app:cardCornerRadius="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="@{() -> clickListener.onClick(itemContact)}">

            <ImageView
                android:id="@+id/iv_avatar"
                android:layout_width="@dimen/avatar_dimen_recycler"
                android:layout_height="@dimen/avatar_dimen_recycler"
                android:contentDescription="@string/foto_avatar"
                app:srcCompat="@drawable/ic_avatar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_name_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_contact"
                tools:text="André"
                app:myContacts="@{itemContact}"
                app:layout_constraintStart_toEndOf="@id/iv_avatar"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <ImageButton
                android:id="@+id/ib_call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/botao_de_chamada"
                android:background="@color/white"
                android:layout_marginStart="90dp"
                app:srcCompat="@android:drawable/sym_action_call"
                app:layout_constraintStart_toEndOf="@id/tv_name_contact"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <ImageButton
                android:id="@+id/ib_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/botao_de_exclusao"
                android:background="@color/white"
                android:layout_marginEnd="20dp"
                app:srcCompat="@android:drawable/ic_delete"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>
